[tool.poetry]
name = "simple-ytdl-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^22.6.2"
yt-dlp = "^2022.9.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
